# CRDocsT

./: README.md
Causal_Tree_CRDT/: CTNode.ts  CausalTree.ts
backend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  test.sh
backend/cpp/cmake/: crdtConfig.cmake.in
backend/cpp/src/: CMakeLists.txt  CMakeLists.txt.library  aliases.hpp  main.cpp
backend/cpp/src/dtype/: FugeList.hpp
backend/cpp/src/dtype/order/: TotalOrder.hpp
backend/cpp/src/utils/: utils.hpp
backend/cpp/tests/: CMakeLists.txt  fuguelist.cpp
backend/src/: index.ts  types.d.ts
backend/src/constants/: operations.ts
backend/src/dts/Fugue/: FNode.ts  FugueList.ts  FugueTest.ts  utils.ts
backend/src/models/: Document.schema.ts  Operation.,schema.ts
frontend/: 200.html  CNAME  biome.jsonc  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx  types.ts  utils.ts  vite-env.d.ts
frontend/src/components/Canvas/: index.tsx
frontend/src/components/CodeMirrorCanvas/: index.tsx
frontend/src/components/LexicalCanvas/: index.tsx
frontend/src/components/UseEditableCanvas/: index.tsx
